# SilentTaskRunner

./: .gitignore  README.md
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  tasks.json  toml_gen.py
src/silent_task_runner/: about.py  desktop.py  program.py  program_old.py
